Bug 149261 - Impress crashes when starting slide show the second time
Summary: Impress crashes when starting slide show the second time
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
: 149290 (view as bug list)
Depends on:
Blocks: Multimonitor
  Show dependency treegraph
 
Reported: 2022-05-24 12:30 UTC by Michael Weghorn
Modified: 2022-05-27 20:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (41.50 KB, text/x-log)
2022-05-24 12:30 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2022-05-24 12:30:36 UTC
Created attachment 180337 [details]
backtrace

Steps to reproduce:

0) have a dual-monitor setup (may or may not be required)
1) open a new presentation in Impress
2) Press F5 to start the slide show
3) Press Esc to end the slide show
4) Press F5 to start slide show again

Result: Crash

Backtrace is attached

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: f817b3de1aa827d93e2a622735c4d570514f4849
CPU threads: 12; OS: Linux 5.17; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2022-05-24 12:32:20 UTC
This is a regression. Bibisected to:

commit 3f768cddd28a2f04eb1ffa30bed4474deb6fbfc4
Author: Miklos Vajna
Date:   Mon May 2 16:25:31 2022 +0200

    framework: avoid re-creating protocol handler instances all the time


It works OK again with a local revert of that commit.

Adding CC: to Miklos Vajna
Comment 2 Miklos Vajna 2022-05-24 15:01:24 UTC
Yes, this only happens with multiple monitors. I'll take a look.
Comment 3 Commit Notification 2022-05-26 13:09:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c0fa456436947a5c167c652d19a884064b43c03d

tdf#149261 sdext: fix crash on starting the presenter console for the 2nd time

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2022-05-27 09:00:34 UTC
*** Bug 149290 has been marked as a duplicate of this bug. ***
Comment 5 Michael Weghorn 2022-05-27 20:35:55 UTC
Thanks! Fix verified with

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 74de217a52a15588e3fdf4059d62a384777c66db
CPU threads: 12; OS: Linux 5.17; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded